--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tema2</title>
+    <title>Tema4</title>
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
@@ -91,7 +91,7 @@
                         </div> 
                         <div class="trailing-icons">
                             <svg class="trailing" >
-                                <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>  
                             </svg>
                              <svg class="trailing" >
                                 <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
@@ -132,7 +132,7 @@
                             <p class="text">Marketing</p>
                         </div>
                         <div class="trailing-icons">
-                            <svg class="trailing" >
+                            <svg class="trailing">
                                 <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                              <svg class="trailing" >
@@ -172,22 +172,22 @@
            <section class="forth-section">
             <h2 class="second-title">Customers</h2>
             <div class="svgs">
-                <svg class="svg" style="outline: 2px solid #8E8F99;">
+                <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-first"></use>
                 </svg>
-                 <svg class="svg" style="outline: 2px solid #8E8F99;">
+                 <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-second"></use>
                 </svg>
-                <svg class="svg" style="outline: 2px solid #8E8F99;">
+                <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-third"></use>
                 </svg>
-                <svg class="svg" style="outline: 2px solid #8E8F99;">
+                <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-forth"></use>
                 </svg>
-                <svg class="svg" style="outline: 2px solid #8E8F99;">
+                <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-fifth"></use>
                 </svg>
-                <svg class="svg" style="outline: 2px solid #8E8F99;">
+                <svg class="svg" style="outline: 2px solid currentColor;">
                     <use href="./images/svg/symbol-defs.svg#icon-sixth"></use>
                 </svg>
             </div>
@@ -201,16 +201,16 @@
             <div class="second-footer-box">
                 <p class="social-media">Social media</p>
                 <div class="social-svgs">
-                    <svg class="trailingbg" >
+                    <svg class="trailingbg" viewBox="0 0 16 16">
                         <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
                     </svg>
-                     <svg class="trailingbg" >
+                     <svg class="trailingbg" viewBox="0 0 16 16">
                         <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
                     </svg>
-                    <svg class="trailingbg" >
+                    <svg class="trailingbg" viewBox="0 0 16 16">
                         <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
                     </svg>
-                    <svg class="trailingbg" >
+                    <svg class="trailingbg" viewBox="0 0 16 16">
                         <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
                     </svg>
                 </div>
@@ -218,135 +218,135 @@
          </footer>
     </div>
     <div id="portofolio">
-                 <!-- Portofolio page here -->
-                      <!-- Header section -->
-         <header class="container-header">
-            <p class="logo">STUDIO</p>
-            <nav>
-                <ul class="answear-list nav-container">
-                    <li> <a class="link" href="./studio">Studio</a> </li>
-                    <li> <a class="link" href="./portfolio">Portfolio</a> </li>
-                    <li> <a class="link" href="./contacts">Contacts</a> </li>
-                </ul>
-            </nav>
-            <address>
-                <a  class="contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a  class="contact phone" href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
-            </address>
-         </header>
-                       <!-- Main section -->
-        <main class="main-container">
-            <nav class="second-nav-container">
-                <ul class="answear-list">
-                    <span class="accent">All</span>
-                    <li>
-                        <button class="portofolio-button" type="button">Web Site</button>
-                    </li>
-                    <li>
-                        <button class="portofolio-button" type="button">App</button>
-                    </li>
-                    <li>
-                        <button class="portofolio-button" type="button">Design</button>
-                    </li>
-                    <li>
-                        <button class="portofolio-button" type="button">Marketing</button>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="answear-list cards-container first-row">
-                <li class="project-card">
-                    <img src="./images/img1.jpg" alt="Interfetele unei aplicatii bancare" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Banking App Interface Concept</h3>
-                        <p class="text">App</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img2.jpg" alt="Telefon si POS ilustrand o plata" width="360" height="300" >
-                    <div class="card-content">
-                        <h3 class="third-title">Cashless Payment</h3>
-                        <p class="text">Marketing</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img3.jpg" alt="Un laptop si un smartphone" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Meditation App</h3>
-                        <p class="text">App</p>
-                    </div>
-                </li>
-            </ul>
-            <ul class="answear-list cards-container">
-                <li class="project-card">                
-                    <img src="./images/img4.jpg" alt="Mainile unui conducator auto pe volan si telefonul acestuia plasat pe parbriz" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Taxi Service</h3>
-                        <p class="text">Marketing</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img5.jpg" alt="Un smartphome si wallpaper-ule sale" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Screen Illustrations</h3>
-                        <p class="text">Design</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img6.jpg" alt="Fata zambitoare ce haine portocalii, ochelari si asculta muzica in casti" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Online Courses</h3>
-                        <p class="text">Marketing</p>
-                    </div>
-                </li>
-            </ul>
-            <ul class="answear-list cards-container last-row">
-                <li class="project-card">
-                    <img src="./images/img7.jpg" alt="Schite grafice de explicare a folosirii unei aplicatii" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Instagram Stories Concept</h3>
-                        <p class="text">Design</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img8.jpg" alt="Femeie ducand o plasa cu legume" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Organic Food</h3>
-                        <p class="text">Web Site</p>
-                    </div>
-                </li>
-                <li class="project-card">
-                    <img src="./images/img9.jpg" alt="Adaugarea laptelui in cafea" width="360" height="300">
-                    <div class="card-content">
-                        <h3 class="third-title">Fresh Coffee</h3>
-                        <p class="text">Web Site</p>
-                    </div>
-                </li>
-            </ul>
-        </main>
-                         <!-- Footer section --> 
-        <footer class="footer-container">
-            <div class="footer-box">
-                <p class="logo-footer">STUDIO</p>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </div>
-            <div class="second-footer-box">
-                <p class="social-media">Social media</p>
-                <div class="social-svgs">
-                    <svg class="trailingbg" >
-                        <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
-                    </svg>
-                     <svg class="trailingbg" >
-                        <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
-                    </svg>
-                    <svg class="trailingbg" >
-                        <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
-                    </svg>
-                    <svg class="trailingbg" >
-                        <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
-                    </svg>
-                </div>
-            </div>
-        </footer>
-    </div>
+        <!-- Portofolio page here -->
+             <!-- Header section -->
+             <header class="container-header">
+               <p class="logo">STUDIO</p>
+               <nav>
+                   <ul class="answear-list nav-container">
+                       <li> <a class="link" href="./studio">Studio</a> </li>
+                       <li> <a class="link" href="./portfolio">Portfolio</a> </li>
+                       <li> <a class="link" href="./contacts">Contacts</a> </li>
+                   </ul>
+               </nav>
+               <address>
+                   <a  class="contact email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                   <a  class="contact phone" href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+               </address>
+            </header>
+                          <!-- Main section -->
+           <main class="main-container">
+               <nav class="second-nav-container">
+                   <ul class="answear-list">
+                       <span class="accent">All</span>
+                       <li>
+                           <button class="portofolio-button" type="button">Web Site</button>
+                       </li>
+                       <li>
+                           <button class="portofolio-button" type="button">App</button>
+                       </li>
+                       <li>
+                           <button class="portofolio-button" type="button">Design</button>
+                       </li>
+                       <li>
+                           <button class="portofolio-button" type="button">Marketing</button>
+                       </li>
+                   </ul>
+               </nav>
+               <ul class="answear-list cards-container first-row">
+                   <li class="project-card">
+                       <img src="./images/img1.jpg" alt="Interfetele unei aplicatii bancare" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Banking App Interface Concept</h3>
+                           <p class="text">App</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img2.jpg" alt="Telefon si POS ilustrand o plata" width="360" height="300" >
+                       <div class="card-content">
+                           <h3 class="third-title">Cashless Payment</h3>
+                           <p class="text">Marketing</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img3.jpg" alt="Un laptop si un smartphone" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Meditation App</h3>
+                           <p class="text">App</p>
+                       </div>
+                   </li>
+               </ul>
+               <ul class="answear-list cards-container">
+                   <li class="project-card">                
+                       <img src="./images/img4.jpg" alt="Mainile unui conducator auto pe volan si telefonul acestuia plasat pe parbriz" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Taxi Service</h3>
+                           <p class="text">Marketing</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img5.jpg" alt="Un smartphome si wallpaper-ule sale" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Screen Illustrations</h3>
+                           <p class="text">Design</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img6.jpg" alt="Fata zambitoare ce haine portocalii, ochelari si asculta muzica in casti" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Online Courses</h3>
+                           <p class="text">Marketing</p>
+                       </div>
+                   </li>
+               </ul>
+               <ul class="answear-list cards-container last-row">
+                   <li class="project-card">
+                       <img src="./images/img7.jpg" alt="Schite grafice de explicare a folosirii unei aplicatii" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Instagram Stories Concept</h3>
+                           <p class="text">Design</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img8.jpg" alt="Femeie ducand o plasa cu legume" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Organic Food</h3>
+                           <p class="text">Web Site</p>
+                       </div>
+                   </li>
+                   <li class="project-card">
+                       <img src="./images/img9.jpg" alt="Adaugarea laptelui in cafea" width="360" height="300">
+                       <div class="card-content">
+                           <h3 class="third-title">Fresh Coffee</h3>
+                           <p class="text">Web Site</p>
+                       </div>
+                   </li>
+               </ul>
+           </main>
+                            <!-- Footer section --> 
+           <footer class="footer-container">
+               <div class="footer-box">
+                   <p class="logo-footer">STUDIO</p>
+                   <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+               </div>
+               <div class="second-footer-box">
+                   <p class="social-media">Social media</p>
+                   <div class="social-svgs">
+                       <svg class="trailingbg">
+                           <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
+                       </svg>
+                        <svg class="trailingbg">
+                           <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
+                       </svg>
+                       <svg class="trailingbg">
+                           <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
+                       </svg>
+                       <svg class="trailingbg">
+                           <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
+                       </svg>
+                   </div>
+               </div>
+           </footer>
+</div>
 </body>
 </html>
