adaugat divuri pentru svg-uri

--- a/index.html
+++ b/index.html
@@ -178,18 +178,26 @@
                 <p class="text">Frontend Developer</p>
               </div>
               <div class="trailing-icons">
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
               </div>
             </li>
             <li class="employee">
@@ -204,18 +212,26 @@
                 <p class="text">Marketing</p>
               </div>
               <div class="trailing-icons">
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </div>
               </div>
             </li>
             <li class="employee">
@@ -230,18 +246,26 @@
                 <p class="text">UI Designer</p>
               </div>
               <div class="trailing-icons">
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-                <svg class="trailing">
-                  <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </div>
+                <div class="trailing-icon">
+                  <svg class="trailing">
+                    <use href="./images/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg> 
+                </div>
               </div>
             </li>
           </ul>
@@ -281,18 +305,26 @@
         <div class="second-footer-box">
           <p class="social-media">Social media</p>
           <div class="social-svgs">
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
-            </svg>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </footer>
