--- a/portofolio.html
+++ b/portofolio.html
@@ -182,18 +182,26 @@
         <div class="second-footer-box">
           <p class="social-media">Social media</p>
           <div class="social-svgs">
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
-            </svg>
-            <svg class="trailingbg" viewBox="0 0 16 16">
-              <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
-            </svg>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-instagrambg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-twitterbg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-facebookbg"></use>
+              </svg>
+            </div>
+            <div class="bg-icon">
+              <svg class="trailingbg" viewBox="0 0 16 16">
+                <use href="./images/svg/symbol-defs.svg#icon-linkedinbg"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </footer>
